<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/prayer"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Prayer_time">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/animation"
        android:visibility="visible"
        android:id="@+id/load"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:id="@+id/background_prayer"
        tools:ignore="ContentDescription" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/layout"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icon_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.044"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:tint="#878686"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="150dp"
                app:cardBackgroundColor="#A6EEEEEE"
                app:cardCornerRadius="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_vertical"
                    tools:layout_editor_absoluteY="56dp"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/data_Ad"
                        android:layout_marginStart="30dp"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/month_Ad"
                        android:layout_marginStart="30dp"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/day_Ad"
                        android:layout_marginStart="28dp"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="35dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/data_Lunar"
                        android:layout_marginStart="30dp"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/month_Lunar"
                        android:layout_marginStart="30dp"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/day_Lunar"
                        android:layout_marginStart="30dp"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#A6EEEEEE"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                android:layout_marginTop="35dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_fajr"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/time_fajr"
                    android:textColor="@color/black"
                    android:layout_marginStart="270dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#A6EEEEEE"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                android:layout_marginTop="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_sunrise"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/time_sunrise"
                    android:textColor="@color/black"
                    android:layout_marginStart="270dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#A6EEEEEE"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                android:layout_marginTop="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_dhuhr"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/time_dhuhr"
                    android:textColor="@color/black"
                    android:layout_marginStart="270dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#A6EEEEEE"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                android:layout_marginTop="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_asr"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/time_asr"
                    android:textColor="@color/black"
                    android:layout_marginStart="270dp"/>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#A6EEEEEE"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                android:layout_marginTop="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_sunset"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/time_sunset"
                    android:textColor="@color/black"
                    android:layout_marginStart="270dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#A6EEEEEE"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                android:layout_marginTop="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_maghrib"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/time_maghrib"
                    android:textColor="@color/black"
                    android:layout_marginStart="270dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#A6EEEEEE"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                android:layout_marginTop="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_isha"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/time_isha"
                    android:textColor="@color/black"
                    android:layout_marginStart="270dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#A6EEEEEE"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                android:layout_marginTop="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_midnight"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="25sp"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/time_midnight"
                    android:textColor="@color/black"
                    android:layout_marginStart="270dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#A6EEEEEE"
                android:layout_marginBottom="50dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                android:layout_marginTop="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_holiday"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/holiday"
                    android:textColor="@color/black"
                    android:layout_marginStart="130dp"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>