<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_page"
    tools:context=".MainActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_rawRes="@raw/animation"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:id="@+id/progress_bar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:id="@+id/background"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_home"
            android:visibility="gone"
            android:orientation="vertical">



            <TextView
                android:id="@+id/name_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:padding="20dp"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/country"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="41dp"
                    android:layout_marginEnd="220dp"
                    android:textSize="20sp"/>


                <TextView
                    android:id="@+id/time"
                    android:layout_width="94dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="277dp"
                    android:layout_marginEnd="40dp"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/shape_search"
                    android:hint="Search"
                    android:layout_marginBottom="15dp"
                    android:id="@+id/edit_search"
                    android:paddingStart="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

                <ImageView
                    android:id="@+id/btn_search"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:tint="#818080"
                    app:srcCompat="@drawable/icon_search"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginEnd="20dp"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/text_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_edit"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:textSize="45sp" />

            <ImageView
                android:id="@+id/icon_current"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/text_temp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/text_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/icon_current"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/condition"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="33dp"
                android:text="@string/text_forecast"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="68dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <Button
                android:id="@+id/btn_prayer_time"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginBottom="11dp"
                android:text="@string/btn_prayer_time"
                android:textAlignment="gravity"
                android:textAllCaps="false"
                android:textSize="24sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>